HACK: arch/mips/Kconfig: select REGMAP_SPI & REGMAP_I2C when building for ATH79
This is to force regmap support ON for external mcuio modules

Signed-off-by: Davide Ciminaghi <davide@linino.org>

--- a/arch/mips/Kconfig
+++ b/arch/mips/Kconfig
@@ -88,6 +88,8 @@ config ATH79
 	select SYS_SUPPORTS_32BIT_KERNEL
 	select SYS_SUPPORTS_BIG_ENDIAN
 	select GENERIC_IRQ_CHIP
+	select REGMAP_I2C
+	select REGMAP_SPI
 	help
 	  Support for the Atheros AR71XX/AR724X/AR913X SoCs.
 
