--- a/drivers/gpio/Kconfig
+++ b/drivers/gpio/Kconfig
@@ -96,6 +96,12 @@ config GPIO_EP93XX
 	depends on ARCH_EP93XX
 	select GPIO_GENERIC
 
+config GPIO_MCUIO
+        tristate "MCUIO gpio driver"
+        depends on MCUIO
+	help
+	  This enables an MCUIO driver for MCUIO GPIO devices
+
 config GPIO_MPC5200
 	def_bool y
 	depends on PPC_MPC52xx
