--- a/drivers/mcuio/Kconfig
+++ b/drivers/mcuio/Kconfig
@@ -22,3 +22,10 @@ config MCUIO_IRQ_CTRL
 	help
 	  The MCUIO irq controller is needed by mcuio functions to send
 	  interrupts to the MPU. If unsure say yes.
+
+config MCUIO_JS_SHIELD
+        tristate "mcuio joystick shield driver"
+	depends on (MCUIO && MCUIO_IRQ_CTRL)
+	default y
+	help
+	  Adds a driver for a joystick + buttons shield (experimental)
