--- a/drivers/mcuio/Kconfig
+++ b/drivers/mcuio/Kconfig
@@ -29,3 +29,10 @@ config MCUIO_JS_SHIELD
 	default y
 	help
 	  Adds a driver for a joystick + buttons shield (experimental)
+
+config MCUIO_ADC
+	tristate "mcuio ADC driver"
+	depends on MCUIO
+	default y
+	help
+	  Adds a driver for analog to digital converters (experimental)
