--- a/drivers/mcuio/Kconfig
+++ b/drivers/mcuio/Kconfig
@@ -36,3 +36,10 @@ config MCUIO_ADC
 	default y
 	help
 	  Adds a driver for analog to digital converters (experimental)
+
+config MCUIO_PWM
+	tristate "mcuio PWM driver"
+	depends on MCUIO
+	default y
+	help
+	  Adds a driver for pulse width modulation outputs (experimental)
