mcuio pwm: driver skeleton in drivers/pwm/pwm-mcuio.c
Signed-off-by: Aurelio Colosimo <aurelio@aureliocolosimo.it>

--- a/drivers/pwm/Kconfig
+++ b/drivers/pwm/Kconfig
@@ -14,4 +14,11 @@ config PWM_SYSFS
 	bool
 	default y if SYSFS
 
+config PWM_MCUIO
+	tristate "mcuio PWM driver"
+	depends on MCUIO
+	default y
+	help
+	  Adds a driver mcuio PWM outputs (experimental)
+
 endif
