--- a/arch/mips/configs/yun_linino_defconfig
+++ b/arch/mips/configs/yun_linino_defconfig
@@ -2824,6 +2824,7 @@ CONFIG_MCUIO=y
 CONFIG_MCUIO_LDISC_HC=y
 CONFIG_MCUIO_IRQ_CTRL=y
 CONFIG_MCUIO_JS_SHIELD=y
+CONFIG_MCUIO_LUCKY_SHIELD=y
 CONFIG_MCUIO_ADC=y
 CONFIG_PWM=y
 CONFIG_PWM_SYSFS=y
