--- a/drivers/mcuio/Kconfig
+++ b/drivers/mcuio/Kconfig
@@ -30,6 +30,13 @@ config MCUIO_JS_SHIELD
 	help
 	  Adds a driver for a joystick + buttons shield (experimental)
 
+config MCUIO_LUCKY_SHIELD
+	tristate "mcuio lucky shield driver"
+	depends on (MCUIO && MCUIO_IRQ_CTRL && I2C)
+	default y
+	help
+	  Adds a driver for the Dog Hunter Lucky shield (experimental)
+
 config MCUIO_ADC
 	tristate "mcuio ADC driver"
 	depends on MCUIO
