mcuio: new sysfs interface for manual probe of shields
This patch adds three attributes to mcuio bus device:

/sys/devices/mcuio/shield_list
/sys/devices/mcuio/shield_register
/sys/devices/mcuio/shield_unregister

Type:

echo shieldname > /sys/devices/mcuio/shield_register

to probe the desired shield.

shield_list shows the name of the supported shields. When a shield
has been probed, its name is prepended by a '*'.

Signed-off-by: Aurelio Colosimo <aurelio@aureliocolosimo.it>

--- a/drivers/mcuio/Kconfig
+++ b/drivers/mcuio/Kconfig
@@ -37,6 +37,14 @@ config MCUIO_LUCKY_SHIELD
 	help
 	  Adds a driver for the Dog Hunter Lucky shield (experimental)
 
+config MCUIO_SHIELDS_MANUAL_PROBE
+	tristate "mcuio shields manual probe"
+	depends on (MCUIO_LUCKY_SHIELD || MCUIO_DIGITALIO_SHIELD)
+	default y
+	help
+	  Since autoprobe of mcuio shields is not implemented yet, this option
+	  makes it possible to manually register shields (experimental).
+
 config MCUIO_ADC
 	tristate "mcuio ADC driver"
 	depends on MCUIO
