mcuio: driver for digital IO shield
Signed-off-by: Aurelio Colosimo <aurelio@aureliocolosimo.it>

--- a/arch/mips/configs/yun_linino_defconfig
+++ b/arch/mips/configs/yun_linino_defconfig
@@ -2825,6 +2825,7 @@ CONFIG_MCUIO_LDISC_HC=y
 CONFIG_MCUIO_IRQ_CTRL=y
 CONFIG_MCUIO_JS_SHIELD=y
 CONFIG_MCUIO_LUCKY_SHIELD=y
+CONFIG_MCUIO_DIGITALIO_SHIELD=y
 CONFIG_MCUIO_SHIELDS_MANUAL_PROBE=y
 CONFIG_MCUIO_ADC=y
 CONFIG_PWM=y
