--- a/drivers/mcuio/Kconfig
+++ b/drivers/mcuio/Kconfig
@@ -37,6 +37,13 @@ config MCUIO_LUCKY_SHIELD
 	help
 	  Adds a driver for the Dog Hunter Lucky shield (experimental)
 
+config MCUIO_DIGITALIO_SHIELD
+	tristate "mcuio Digital I/O shield driver"
+	depends on (MCUIO && MCUIO_IRQ_CTRL && I2C)
+	default y
+	help
+	  Adds a driver for the Dog Hunter Lucky shield (experimental)
+
 config MCUIO_SHIELDS_MANUAL_PROBE
 	tristate "mcuio shields manual probe"
 	depends on (MCUIO_LUCKY_SHIELD || MCUIO_DIGITALIO_SHIELD)
