mcuio: lucky shield, chip hih6130 has been replaced by sht21
Signed-off-by: Aurelio Colosimo <aurelio@aureliocolosimo.it>

--- a/arch/mips/configs/yun_linino_defconfig
+++ b/arch/mips/configs/yun_linino_defconfig
@@ -1954,7 +1954,7 @@ CONFIG_SENSORS_HTU21=y
 # CONFIG_SENSORS_PCF8591 is not set
 # CONFIG_PMBUS is not set
 # CONFIG_SENSORS_SHT15 is not set
-# CONFIG_SENSORS_SHT21 is not set
+CONFIG_SENSORS_SHT21=y
 # CONFIG_SENSORS_SIS5595 is not set
 # CONFIG_SENSORS_SMM665 is not set
 # CONFIG_SENSORS_DME1737 is not set
