yun_linino_defconfig: mma8491 driver compiled by default
Signed-off-by: Aurelio Colosimo <aurelio@aureliocolosimo.it>

--- a/arch/mips/configs/yun_linino_defconfig
+++ b/arch/mips/configs/yun_linino_defconfig
@@ -2845,6 +2845,7 @@ CONFIG_IIO_CONSUMERS_PER_TRIGGER=2
 # CONFIG_IIO_ST_ACCEL_3AXIS is not set
 # CONFIG_KXSD9 is not set
 CONFIG_MMA8452=y
+CONFIG_MMA8491=y
 
 #
 # Analog to digital converters
