--- a/drivers/mcuio/Kconfig
+++ b/drivers/mcuio/Kconfig
@@ -42,7 +42,7 @@ config MCUIO_DIGITALIO_SHIELD
 	depends on (MCUIO && MCUIO_IRQ_CTRL && I2C)
 	default y
 	help
-	  Adds a driver for the Dog Hunter Lucky shield (experimental)
+	  Adds a driver for the Dog Hunter Digital IO shield (experimental)
 
 config MCUIO_SHIELDS_MANUAL_PROBE
 	tristate "mcuio shields manual probe"
