--- a/drivers/mcuio/Kconfig
+++ b/drivers/mcuio/Kconfig
@@ -44,6 +44,13 @@ config MCUIO_DIGITALIO_SHIELD
 	help
 	  Adds a driver for the Dog Hunter Digital IO shield (experimental)
 
+config MCUIO_DOGOLED_SHIELD
+	tristate "mcuio Dog OLED shield driver"
+	depends on (MCUIO && I2C)
+	default y
+	help
+	  Adds a driver for the Dog Hunter Dog OLED shield (experimental)
+
 config MCUIO_SHIELDS_MANUAL_PROBE
 	tristate "mcuio shields manual probe"
 	depends on (MCUIO_LUCKY_SHIELD || MCUIO_DIGITALIO_SHIELD)
