MCUIO: add soft implementation of mcuio msg irq controller

--- a/drivers/mcuio/Makefile
+++ b/drivers/mcuio/Makefile
@@ -4,7 +4,8 @@ LINUX ?= /lib/modules/$(shell uname -r)/build
 
 mcuio-y := core.o bus.o sysfs.o
 
-obj-$(CONFIG_MCUIO) += mcuio.o mcuio-hc-drv.o mcuio-hc-dev.o mcuio-soft-hc.o
+obj-$(CONFIG_MCUIO) += mcuio.o mcuio-hc-drv.o mcuio-hc-dev.o mcuio-soft-hc.o \
+mcuio-soft-local-irq-ctrl-msg-dev.o
 obj-$(CONFIG_MCUIO_LDISC_HC) += mcuio-hc-ldisc.o
 obj-$(CONFIG_MCUIO_IRQ_CTRL) += mcuio-irq-ctrl.o
 obj-$(CONFIG_MCUIO_JS_SHIELD) += mcuio-js-shield.o
