--- a/drivers/mcuio/Kconfig
+++ b/drivers/mcuio/Kconfig
@@ -58,3 +58,10 @@ config MCUIO_ADC
 	default y
 	help
 	  Adds a driver for analog to digital converters (experimental)
+
+config MCUIO_IRQ_TEST
+        tristate "mcuio irq test function driver"
+	depends on MCUIO
+	default n
+	help
+	  Adds a driver for the irq test mcuio function
