--- a/drivers/mcuio/Makefile
+++ b/drivers/mcuio/Makefile
@@ -13,3 +13,4 @@ obj-$(CONFIG_MCUIO_LUCKY_SHIELD) += mcuio-lucky-shield.o
 obj-$(CONFIG_MCUIO_DIGITALIO_SHIELD) += mcuio-dio-shield.o
 obj-$(CONFIG_MCUIO_DOGOLED_SHIELD) += mcuio-dogoled-shield.o
 obj-$(CONFIG_MCUIO_SHIELDS_MANUAL_PROBE) += mcuio-shields-manprobe.o
+obj-$(CONFIG_MCUIO_IRQ_TEST) += mcuio-irq-test.o
