--- a/drivers/mcuio/Kconfig
+++ b/drivers/mcuio/Kconfig
@@ -7,9 +7,10 @@ menuconfig MCUIO
 	  (MCU = Micro Controller Unit, some kind of tiny microcontroller
 	  running a tiny OS or no OS at all).
 
+if MCUIO
+
 config MCUIO_LDISC_HC
 	tristate "mcuio line discipline host controller"
-	depends on MCUIO
 	default y
 	help
 	  This adds a line-discipline based MCUIO host controller, which is
@@ -17,21 +18,20 @@ config MCUIO_LDISC_HC
 
 config MCUIO_JS_SHIELD
 	tristate "mcuio joystick shield driver"
-	depends on (MCUIO && MCUIO_IRQ_CTRL)
 	default y
 	help
 	  Adds a driver for a joystick + buttons shield (experimental)
 
 config MCUIO_LUCKY_SHIELD
 	tristate "mcuio lucky shield driver"
-	depends on (MCUIO && MCUIO_IRQ_CTRL && I2C)
+	depends on I2C
 	default y
 	help
 	  Adds a driver for the Dog Hunter Lucky shield (experimental)
 
 config MCUIO_DIGITALIO_SHIELD
 	tristate "mcuio Digital I/O shield driver"
-	depends on (MCUIO && MCUIO_IRQ_CTRL && I2C)
+	depends on I2C
 	default y
 	help
 	  Adds a driver for the Dog Hunter Lucky shield (experimental)
@@ -46,14 +46,14 @@ config MCUIO_SHIELDS_MANUAL_PROBE
 
 config MCUIO_ADC
 	tristate "mcuio ADC driver"
-	depends on MCUIO
 	default y
 	help
 	  Adds a driver for analog to digital converters (experimental)
 
 config MCUIO_IRQ_TEST
         tristate "mcuio irq test function driver"
-	depends on MCUIO
 	default n
 	help
 	  Adds a driver for the irq test mcuio function
+
+endif # MCUIO
