--- a/arch/mips/configs/yun_linino_defconfig
+++ b/arch/mips/configs/yun_linino_defconfig
@@ -2821,12 +2821,12 @@ CONFIG_USBIP_HOST=m
 # CONFIG_PM_DEVFREQ is not set
 CONFIG_MCUIO=y
 CONFIG_MCUIO_LDISC_HC=y
-CONFIG_MCUIO_IRQ_CTRL=y
 CONFIG_MCUIO_JS_SHIELD=y
 CONFIG_MCUIO_LUCKY_SHIELD=y
 CONFIG_MCUIO_DIGITALIO_SHIELD=y
 CONFIG_MCUIO_DOGOLED_SHIELD=y
 CONFIG_MCUIO_SHIELDS_MANUAL_PROBE=y
+# CONFIG_MCUIO_IRQ_TEST is not set
 CONFIG_PWM=y
 CONFIG_PWM_SYSFS=y
 CONFIG_PWM_MCUIO=y
